data/diff_tests/wasmtime/call_indirect_IncorrectHandlingofControlFlowAcrossModuleBoundaries_4755.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8a\80\80\80\00\02\60"
    "\01\7f\01\7f\60\00\01\7f\02\95\80\80\80\00\01\03"
    "\65\6e\76\0d\69\6d\70\6f\72\74\65\64\5f\66\75\6e"
    "\63\00\00\03\82\80\80\80\00\01\01\04\84\80\80\80"
    "\00\01\70\00\01\09\87\80\80\80\00\01\00\41\00\0b"
    "\01\00\0a\8f\80\80\80\00\01\89\80\80\80\00\00\41"
    "\00\41\2a\11\00\00\0b"
  )
""
)